src/generated/SimpleLangParser.py
# Generated from C:/Users/h3nri/Documents/Compiladores/grammar/SimpleLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SimpleLangParser ( Parser ):

    grammarFileName = "SimpleLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'<'", "'<='", "'>'", "'>='", "'=='", 
                     "'<>'", "'~'", "';'", "'.'", "':'", "','", "'('", "')'", 
                     "':='" ]

    symbolicNames = [ "<INVALID>", "PROGRAM", "INTEGER", "BOOLEAN", "BEGIN", 
                      "END", "WHILE", "DO", "READ", "VAR", "FALSE", "TRUE", 
                      "WRITE", "OR", "AND", "PLUS", "MINUS", "MULT", "DIV", 
                      "LT", "LE", "GT", "GE", "EQ", "NE", "OPNEG", "PVIG", 
                      "PONTO", "DPONTOS", "VIG", "ABPAR", "FPAR", "ATRIB", 
                      "ID", "CTE", "CADEIA", "LINE_COMMENT", "WS", "ERR_CHAR" ]

    RULE_program = 0
    RULE_block = 1
    RULE_blockItem = 2
    RULE_decl = 3
    RULE_stmt = 4
    RULE_whileStmt = 5
    RULE_expr = 6
    RULE_logicOrExpr = 7
    RULE_logicAndExpr = 8
    RULE_relExpr = 9
    RULE_addExpr = 10
    RULE_mulExpr = 11
    RULE_unaryExpr = 12
    RULE_valueAtom = 13

    ruleNames =  [ "program", "block", "blockItem", "decl", "stmt", "whileStmt", 
                   "expr", "logicOrExpr", "logicAndExpr", "relExpr", "addExpr", 
                   "mulExpr", "unaryExpr", "valueAtom" ]

    EOF = Token.EOF
    PROGRAM=1
    INTEGER=2
    BOOLEAN=3
    BEGIN=4
    END=5
    WHILE=6
    DO=7
    READ=8
    VAR=9
    FALSE=10
    TRUE=11
    WRITE=12
    OR=13
    AND=14
    PLUS=15
    MINUS=16
    MULT=17
    DIV=18
    LT=19
    LE=20
    GT=21
    GE=22
    EQ=23
    NE=24
    OPNEG=25
    PVIG=26
    PONTO=27
    DPONTOS=28
    VIG=29
    ABPAR=30
    FPAR=31
    ATRIB=32
    ID=33
    CTE=34
    CADEIA=35
    LINE_COMMENT=36
    WS=37
    ERR_CHAR=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(SimpleLangParser.BEGIN, 0)

        def PROGRAM(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleLangParser.PROGRAM)
            else:
                return self.getToken(SimpleLangParser.PROGRAM, i)

        def DPONTOS(self):
            return self.getToken(SimpleLangParser.DPONTOS, 0)

        def block(self):
            return self.getTypedRuleContext(SimpleLangParser.BlockContext,0)


        def END(self):
            return self.getToken(SimpleLangParser.END, 0)

        def PONTO(self):
            return self.getToken(SimpleLangParser.PONTO, 0)

        def EOF(self):
            return self.getToken(SimpleLangParser.EOF, 0)

        def getRuleIndex(self):
            return SimpleLangParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SimpleLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.match(SimpleLangParser.BEGIN)
            self.state = 29
            self.match(SimpleLangParser.PROGRAM)
            self.state = 30
            self.match(SimpleLangParser.DPONTOS)
            self.state = 31
            self.block()
            self.state = 32
            self.match(SimpleLangParser.END)
            self.state = 33
            self.match(SimpleLangParser.PROGRAM)
            self.state = 34
            self.match(SimpleLangParser.PONTO)
            self.state = 35
            self.match(SimpleLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleLangParser.BlockItemContext)
            else:
                return self.getTypedRuleContext(SimpleLangParser.BlockItemContext,i)


        def getRuleIndex(self):
            return SimpleLangParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = SimpleLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8589939532) != 0):
                self.state = 37
                self.blockItem()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(SimpleLangParser.DeclContext,0)


        def stmt(self):
            return self.getTypedRuleContext(SimpleLangParser.StmtContext,0)


        def getRuleIndex(self):
            return SimpleLangParser.RULE_blockItem

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockItem" ):
                return visitor.visitBlockItem(self)
            else:
                return visitor.visitChildren(self)




    def blockItem(self):

        localctx = SimpleLangParser.BlockItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_blockItem)
        try:
            self.state = 45
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 3, 9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.decl()
                pass
            elif token in [6, 8, 12, 33]:
                self.enterOuterAlt(localctx, 2)
                self.state = 44
                self.stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleLangParser.RULE_decl

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class VarDeclContext(DeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.DeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(SimpleLangParser.VAR, 0)
        def ID(self):
            return self.getToken(SimpleLangParser.ID, 0)
        def PVIG(self):
            return self.getToken(SimpleLangParser.PVIG, 0)
        def ATRIB(self):
            return self.getToken(SimpleLangParser.ATRIB, 0)
        def expr(self):
            return self.getTypedRuleContext(SimpleLangParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)


    class IntDeclContext(DeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.DeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER(self):
            return self.getToken(SimpleLangParser.INTEGER, 0)
        def ID(self):
            return self.getToken(SimpleLangParser.ID, 0)
        def PVIG(self):
            return self.getToken(SimpleLangParser.PVIG, 0)
        def ATRIB(self):
            return self.getToken(SimpleLangParser.ATRIB, 0)
        def expr(self):
            return self.getTypedRuleContext(SimpleLangParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntDecl" ):
                return visitor.visitIntDecl(self)
            else:
                return visitor.visitChildren(self)


    class BoolDeclContext(DeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.DeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOLEAN(self):
            return self.getToken(SimpleLangParser.BOOLEAN, 0)
        def ID(self):
            return self.getToken(SimpleLangParser.ID, 0)
        def PVIG(self):
            return self.getToken(SimpleLangParser.PVIG, 0)
        def ATRIB(self):
            return self.getToken(SimpleLangParser.ATRIB, 0)
        def expr(self):
            return self.getTypedRuleContext(SimpleLangParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolDecl" ):
                return visitor.visitBoolDecl(self)
            else:
                return visitor.visitChildren(self)



    def decl(self):

        localctx = SimpleLangParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl)
        self._la = 0 # Token type
        try:
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                localctx = SimpleLangParser.IntDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.match(SimpleLangParser.INTEGER)
                self.state = 48
                self.match(SimpleLangParser.ID)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==32:
                    self.state = 49
                    self.match(SimpleLangParser.ATRIB)
                    self.state = 50
                    self.expr()


                self.state = 53
                self.match(SimpleLangParser.PVIG)
                pass
            elif token in [3]:
                localctx = SimpleLangParser.BoolDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.match(SimpleLangParser.BOOLEAN)
                self.state = 55
                self.match(SimpleLangParser.ID)
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==32:
                    self.state = 56
                    self.match(SimpleLangParser.ATRIB)
                    self.state = 57
                    self.expr()


                self.state = 60
                self.match(SimpleLangParser.PVIG)
                pass
            elif token in [9]:
                localctx = SimpleLangParser.VarDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 61
                self.match(SimpleLangParser.VAR)
                self.state = 62
                self.match(SimpleLangParser.ID)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==32:
                    self.state = 63
                    self.match(SimpleLangParser.ATRIB)
                    self.state = 64
                    self.expr()


                self.state = 67
                self.match(SimpleLangParser.PVIG)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleLangParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(SimpleLangParser.ID, 0)
        def ATRIB(self):
            return self.getToken(SimpleLangParser.ATRIB, 0)
        def expr(self):
            return self.getTypedRuleContext(SimpleLangParser.ExprContext,0)

        def PVIG(self):
            return self.getToken(SimpleLangParser.PVIG, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStmt" ):
                return visitor.visitAssignStmt(self)
            else:
                return visitor.visitChildren(self)


    class WriteStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WRITE(self):
            return self.getToken(SimpleLangParser.WRITE, 0)
        def expr(self):
            return self.getTypedRuleContext(SimpleLangParser.ExprContext,0)

        def PVIG(self):
            return self.getToken(SimpleLangParser.PVIG, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWriteStmt" ):
                return visitor.visitWriteStmt(self)
            else:
                return visitor.visitChildren(self)


    class ReadStmtContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def READ(self):
            return self.getToken(SimpleLangParser.READ, 0)
        def ID(self):
            return self.getToken(SimpleLangParser.ID, 0)
        def PVIG(self):
            return self.getToken(SimpleLangParser.PVIG, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadStmt" ):
                return visitor.visitReadStmt(self)
            else:
                return visitor.visitChildren(self)


    class WhileStmtNodeContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleLangParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def whileStmt(self):
            return self.getTypedRuleContext(SimpleLangParser.WhileStmtContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmtNode" ):
                return visitor.visitWhileStmtNode(self)
            else:
                return visitor.visitChildren(self)



    def stmt(self):

        localctx = SimpleLangParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stmt)
        try:
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [33]:
                localctx = SimpleLangParser.AssignStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.match(SimpleLangParser.ID)
                self.state = 71
                self.match(SimpleLangParser.ATRIB)
                self.state = 72
                self.expr()
                self.state = 73
                self.match(SimpleLangParser.PVIG)
                pass
            elif token in [12]:
                localctx = SimpleLangParser.WriteStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.match(SimpleLangParser.WRITE)
                self.state = 76
                self.expr()
                self.state = 77
                self.match(SimpleLangParser.PVIG)
                pass
            elif token in [8]:
                localctx = SimpleLangParser.ReadStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 79
                self.match(SimpleLangParser.READ)
                self.state = 80
                self.match(SimpleLangParser.ID)
                self.state = 81
                self.match(SimpleLangParser.PVIG)
                pass
            elif token in [6]:
                localctx = SimpleLangParser.WhileStmtNodeContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 82
                self.whileStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleLangParser.WHILE)
            else:
                return self.getToken(SimpleLangParser.WHILE, i)

        def ABPAR(self):
            return self.getToken(SimpleLangParser.ABPAR, 0)

        def expr(self):
            return self.getTypedRuleContext(SimpleLangParser.ExprContext,0)


        def FPAR(self):
            return self.getToken(SimpleLangParser.FPAR, 0)

        def DO(self):
            return self.getToken(SimpleLangParser.DO, 0)

        def DPONTOS(self):
            return self.getToken(SimpleLangParser.DPONTOS, 0)

        def block(self):
            return self.getTypedRuleContext(SimpleLangParser.BlockContext,0)


        def END(self):
            return self.getToken(SimpleLangParser.END, 0)

        def getRuleIndex(self):
            return SimpleLangParser.RULE_whileStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = SimpleLangParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(SimpleLangParser.WHILE)
            self.state = 86
            self.match(SimpleLangParser.ABPAR)
            self.state = 87
            self.expr()
            self.state = 88
            self.match(SimpleLangParser.FPAR)
            self.state = 89
            self.match(SimpleLangParser.DO)
            self.state = 90
            self.match(SimpleLangParser.DPONTOS)
            self.state = 91
            self.block()
            self.state = 92
            self.match(SimpleLangParser.END)
            self.state = 93
            self.match(SimpleLangParser.WHILE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicOrExpr(self):
            return self.getTypedRuleContext(SimpleLangParser.LogicOrExprContext,0)


        def getRuleIndex(self):
            return SimpleLangParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = SimpleLangParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.logicOrExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicOrExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicAndExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleLangParser.LogicAndExprContext)
            else:
                return self.getTypedRuleContext(SimpleLangParser.LogicAndExprContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleLangParser.OR)
            else:
                return self.getToken(SimpleLangParser.OR, i)

        def getRuleIndex(self):
            return SimpleLangParser.RULE_logicOrExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicOrExpr" ):
                return visitor.visitLogicOrExpr(self)
            else:
                return visitor.visitChildren(self)




    def logicOrExpr(self):

        localctx = SimpleLangParser.LogicOrExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_logicOrExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.logicAndExpr()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 98
                self.match(SimpleLangParser.OR)
                self.state = 99
                self.logicAndExpr()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicAndExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleLangParser.RelExprContext)
            else:
                return self.getTypedRuleContext(SimpleLangParser.RelExprContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleLangParser.AND)
            else:
                return self.getToken(SimpleLangParser.AND, i)

        def getRuleIndex(self):
            return SimpleLangParser.RULE_logicAndExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogicAndExpr" ):
                return visitor.visitLogicAndExpr(self)
            else:
                return visitor.visitChildren(self)




    def logicAndExpr(self):

        localctx = SimpleLangParser.LogicAndExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_logicAndExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.relExpr()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 106
                self.match(SimpleLangParser.AND)
                self.state = 107
                self.relExpr()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def addExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleLangParser.AddExprContext)
            else:
                return self.getTypedRuleContext(SimpleLangParser.AddExprContext,i)


        def LT(self):
            return self.getToken(SimpleLangParser.LT, 0)

        def LE(self):
            return self.getToken(SimpleLangParser.LE, 0)

        def GT(self):
            return self.getToken(SimpleLangParser.GT, 0)

        def GE(self):
            return self.getToken(SimpleLangParser.GE, 0)

        def EQ(self):
            return self.getToken(SimpleLangParser.EQ, 0)

        def NE(self):
            return self.getToken(SimpleLangParser.NE, 0)

        def getRuleIndex(self):
            return SimpleLangParser.RULE_relExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelExpr" ):
                return visitor.visitRelExpr(self)
            else:
                return visitor.visitChildren(self)




    def relExpr(self):

        localctx = SimpleLangParser.RelExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_relExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.addExpr()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 33030144) != 0):
                self.state = 114
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 33030144) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 115
                self.addExpr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mulExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleLangParser.MulExprContext)
            else:
                return self.getTypedRuleContext(SimpleLangParser.MulExprContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleLangParser.PLUS)
            else:
                return self.getToken(SimpleLangParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleLangParser.MINUS)
            else:
                return self.getToken(SimpleLangParser.MINUS, i)

        def getRuleIndex(self):
            return SimpleLangParser.RULE_addExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddExpr" ):
                return visitor.visitAddExpr(self)
            else:
                return visitor.visitChildren(self)




    def addExpr(self):

        localctx = SimpleLangParser.AddExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_addExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.mulExpr()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==15 or _la==16:
                self.state = 119
                _la = self._input.LA(1)
                if not(_la==15 or _la==16):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 120
                self.mulExpr()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MulExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unaryExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleLangParser.UnaryExprContext)
            else:
                return self.getTypedRuleContext(SimpleLangParser.UnaryExprContext,i)


        def MULT(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleLangParser.MULT)
            else:
                return self.getToken(SimpleLangParser.MULT, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleLangParser.DIV)
            else:
                return self.getToken(SimpleLangParser.DIV, i)

        def getRuleIndex(self):
            return SimpleLangParser.RULE_mulExpr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulExpr" ):
                return visitor.visitMulExpr(self)
            else:
                return visitor.visitChildren(self)




    def mulExpr(self):

        localctx = SimpleLangParser.MulExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_mulExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.unaryExpr()
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==17 or _la==18:
                self.state = 127
                _la = self._input.LA(1)
                if not(_la==17 or _la==18):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 128
                self.unaryExpr()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

